# SimDynamics

./: README.md  SimTools4ActuatorController.ino
DynamicHub/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
DynamicHub/config/: rig_profile.example.ini
DynamicHub/firmware/ArduinoLeonardo/: HandbrakeHX711.ino  README.md
DynamicHub/firmware/ArduinoMega/: DynamicHubController.ino
DynamicHub/include/dynamic_hub/: actuator_profile.hpp  config_parser.hpp  serial_link.hpp  telemetry_frame.hpp  telemetry_router.hpp
DynamicHub/include/dynamic_hub/game_interfaces/: assetto_corsa.hpp  assetto_corsa_competizione.hpp  base.hpp  rfactor2.hpp
DynamicHub/src/: actuator_profile.cpp  config_parser.cpp  main.cpp  serial_link.cpp  telemetry_router.cpp
DynamicHub/src/dynamic_hub/: __init__.py  config.py  main.py  serial_link.py  telemetry_router.py
DynamicHub/src/dynamic_hub/game_interfaces/: __init__.py  assetto_corsa.py  assetto_corsa_competizione.py  base.py  rfactor2.py
DynamicHub/src/dynamic_hub/ui/: __init__.py  cli.py
DynamicHub/src/game_interfaces/: assetto_corsa.cpp  assetto_corsa_competizione.cpp  base.cpp  rfactor2.cpp
SDRacingHub/: AppWindow.Designer.cs  AppWindow.cs  DeviceTitle.cs  GameTitle.cs  GamesSettingsControl.Designer.cs  GamesSettingsControl.cs  JavaScriptSerializer.cs  PluginManager.cs  PluginsSettingsControl.Designer.cs  PluginsSettingsControl.cs  Program.cs  README.md  SDRacingHub.csproj  SDRacingHub.sln  SettingsControl.cs  SettingsForm.Designer.cs  SettingsForm.cs  WSClient.cs  WebServer.cs  WebServerSettingsControl.Designer.cs  (+1 more)
(+54 files in other folders)
