[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamichub"
version = "0.1.0"
description = "Serial-based motion middleware for four-actuator rigs"
authors = [{ name = "SimDynamics" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
]

[project.scripts]
dynamichub = "dynamic_hub.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
